Termino Test para puntuacion de Jugador